<?xml version="1.0"?>
<package format="2">
  <name>add_pkg</name>
  <version>0.0.0</version>
  <description>The add package</description>

  <maintainer email="dpcaron99@gmail.com">Dalton Caron</maintainer>

  <license>Unlicense</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>rostest</build_depend>

  <test_depend>rospy</test_depend>
  <test_depend>rosunit</test_depend>

  <exec_depend>rospy</exec_depend>

  <export></export>
</package>
